@@ -171,6 +171,8 @@ extern const std::string PREF_REUSE_URI;
 extern const std::string PREF_XML_RPC_USER;
 // value: string
 extern const std::string PREF_XML_RPC_PASSWD;
+// value: 1*digit
+extern const std::string PREF_XML_RPC_MAX_REQUEST_SIZE;
 // value: string
 extern const std::string PREF_ON_DOWNLOAD_START;
 extern const std::string PREF_ON_DOWNLOAD_STOP;
